; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_buffer.c_array_getreadbuf.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_buffer.c_array_getreadbuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PyExc_ValueError = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"accessing non-existing array segment\00", align 1
@.str.1 = private unnamed_addr constant [30 x i8] c"array is not a single segment\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i64, i8**)* @array_getreadbuf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @array_getreadbuf(i32* %0, i64 %1, i8** %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8**, align 8
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store i8** %2, i8*** %7, align 8
  %8 = load i64, i64* %6, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %3
  %11 = load i32, i32* @PyExc_ValueError, align 4
  %12 = call i32 @PyErr_SetString(i32 %11, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  store i64 -1, i64* %4, align 8
  br label %27

13:                                               ; preds = %3
  %14 = load i32*, i32** %5, align 8
  %15 = call i64 @PyArray_ISONESEGMENT(i32* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %23

17:                                               ; preds = %13
  %18 = load i32*, i32** %5, align 8
  %19 = call i8* @PyArray_DATA(i32* %18)
  %20 = load i8**, i8*** %7, align 8
  store i8* %19, i8** %20, align 8
  %21 = load i32*, i32** %5, align 8
  %22 = call i64 @PyArray_NBYTES(i32* %21)
  store i64 %22, i64* %4, align 8
  br label %27

23:                                               ; preds = %13
  %24 = load i32, i32* @PyExc_ValueError, align 4
  %25 = call i32 @PyErr_SetString(i32 %24, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0))
  %26 = load i8**, i8*** %7, align 8
  store i8* null, i8** %26, align 8
  store i64 -1, i64* %4, align 8
  br label %27

27:                                               ; preds = %23, %17, %10
  %28 = load i64, i64* %4, align 8
  ret i64 %28
}

declare dso_local i32 @PyErr_SetString(i32, i8*) #1

declare dso_local i64 @PyArray_ISONESEGMENT(i32*) #1

declare dso_local i8* @PyArray_DATA(i32*) #1

declare dso_local i64 @PyArray_NBYTES(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
